--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,12 @@
     <string name="action_settings">Settings</string>
 
     <string name="add_item">Add Item</string>
-    <string name="edit_item_below">Edit Item Below:</string>
-    <string name="enter_new_item">Enter a new item</string>
+    <string name="edit_title">Edit Title:</string>
+    <string name="edit_priority">Edit Priority:</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="priority">Priority:</string>
     <string name="save">Save</string>
+    <string name="title">Title:</string>
+    <string name="title_activity_add_item">Add New Item</string>
     <string name="title_activity_edit_item">Edit Item</string>
 </resources>
