Add Support for Due Date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="title">Title:</string>
     <string name="title_activity_add_item">Add New Item</string>
     <string name="title_activity_edit_item">Edit Item</string>
+    <string name="due_date">Due Date:</string>
+    <string name="edit_due_date">Edit Due Date:</string>
 </resources>
