--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">Simple Todo</string>
+    <string name="app_name">Checklist</string>
 
     <string name="action_settings">Settings</string>
 
     <string name="add_item">Add Item</string>
     <string name="edit_title">Edit Title:</string>
     <string name="edit_priority">Edit Priority:</string>
-    <string name="enter_name">Enter Name</string>
+    <string name="enter_title">Enter Title</string>
     <string name="priority">Priority:</string>
     <string name="save">Save</string>
     <string name="title">Title:</string>
@@ -14,4 +14,6 @@
     <string name="title_activity_edit_item">Edit Item</string>
     <string name="due_date">Due Date:</string>
     <string name="edit_due_date">Edit Due Date:</string>
+    <string name="action_trash">Trash Checked Items</string>
+    <string name="check_all">Check All Items</string>
 </resources>
